CU-86a6wptdd - Criar rota de listagem de registros de tempo agrupados por estudante
